--- a/style.css
+++ b/style.css
@@ -5,13 +5,16 @@ body {
 h1 {
   font-size: 50px;
 }
+h2 {
+  font-size: 40px;
+}
 .orange-color {
   color: orange;
 }
 .font {
   text-align: justify;
 }
-section {
+.flexible-container {
   display: flex;
   margin-bottom: 150px;
 }
@@ -38,4 +41,32 @@ section {
   background-image: url(images/dream-bg.png);
   background-repeat: no-repeat;
   background-position: right;
+}
+.exp-item {
+  width: 40%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 10px 10px 50px gray;
+  border-left: 10px solid;
+}
+
+.exp-area {
+  background-image: url(images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
+}
+#web-dev {
+  border-left: 10px solid;
+  border-image: linear-gradient(blue, cyan);
+  border-image-slice: 1;
+}
+#web-dev1 {
+  border-left: 10px solid;
+  border-image: linear-gradient(red, gray);
+  border-image-slice: 1;
+}
+footer p {
+  text-align: center;
 }
